--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,6 +33,7 @@
   background: white;
   padding: 4rem;
   border-radius: 1rem;
+  border-top: 0.5rem solid #1da57a;
   -webkit-box-shadow: -7px 10px 5px -7px rgba(209, 209, 209, 0.35);
   -moz-box-shadow: -7px 10px 5px -7px rgba(209, 209, 209, 0.35);
   box-shadow: -7px 10px 5px -7px rgba(209, 209, 209, 0.35);
